// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <CellGrid>
    <div
      className="cell-grid orion-fusion-theme"
    >
      <Cell>
        <div
          className="cell"
        />
      </Cell>
    </div>
  </CellGrid>
</ThemeContextProvider>
`;

exports[`should render a both divider cell grid 1`] = `
<div
  className="cell-grid divider-both"
>
  <Cell />
</div>
`;

exports[`should render a cell grid with refCallback 1`] = `
<div
  className="cell-grid"
>
  <Cell />
</div>
`;

exports[`should render a default cell grid 1`] = `
<div
  className="cell-grid"
>
  <Cell />
</div>
`;

exports[`should render a horizontal divider cell grid 1`] = `
<div
  className="cell-grid divider-horizontal"
>
  <Cell />
</div>
`;

exports[`should render a vertical divider cell grid 1`] = `
<div
  className="cell-grid divider-vertical"
>
  <Cell />
</div>
`;
